--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -23,25 +23,26 @@
     <div class="part">
       <h2>레이아웃</h2>
       <ul>
-        <li><a target="blank" href="b_01_layout_base.html">float을 이해하기 위한 layout 구성 풀이</a></li>
-        <li><a target="blank" href="layout_02.html">레이아웃 만들기</a></li>
-        <li><a target="blank" href="b_02_layout_test_01_result.html">레이아웃 결과</a></li>
-        <li><a target="blank" href="b_03_layout_test_02_result.html">레이아웃 과제 결과 2</a></li>
-        <li><a target="blank" href="b_03_layout_test_03_result.html">레이아웃 과제 결과 3</a></li>
-        <li><a target="blank" href="b_03_layout_test_04_result.html">레이아웃 과제 결과 4</a></li>
-        <li><a target="blank" href="b_04_layout_test_pdf_result.html">pdf 결과</a></li>
-        <li><a target="blank" href="b_05_layout_test_pdf.html">웹 디자인 기능사 문제</a></li>
-        <li><a target="blank" href="b_05_layout_test_pdf.html">웹 디자인 기능사 문제</a></li>
+        <li><a target="_blank" href="b_01_layout_base.html">float을 이해하기 위한 layout 구성 풀이</a></li>
+        <li><a target="_blank" href="layout_02.html">레이아웃 만들기</a></li>
+        <li><a target="_blank" href="b_02_layout_test_01_result.html">레이아웃 결과</a></li>
+        <li><a target="_blank" href="b_03_layout_test_02_result.html">레이아웃 과제 결과 2</a></li>
+        <li><a target="_blank" href="b_03_layout_test_03_result.html">레이아웃 과제 결과 3</a></li>
+        <li><a target="_blank" href="b_03_layout_test_04_result.html">레이아웃 과제 결과 4</a></li>
+        <li><a target="_blank" href="b_04_layout_test_pdf_result.html">pdf 결과</a></li>
+        <li><a target="_blank" href="b_05_layout_test_pdf.html">웹 디자인 기능사 문제</a></li>
+        <li><a target="_blank" href="b_05_layout_test_pdf.html">웹 디자인 기능사 문제</a></li>
       </ul>
     </div>
     <div class="part">
       <h2>시안</h2>
       <ul>
-        <li><a target="blank" href="./c_01_web.html">웹 문제 1</a></li>
-        <li><a target="blank" href="./c_02_web.html">웹 문제 2</a></li>
-        <li><a target="blank" href="./c_02_web_result.html">웹 문제 2 풀이</a></li>
-        <li><a target="blank" href="./c_04_web.html">웹 문제 C-1</a></li>
-        <li><a target="blank" href="./c_04_web_result.html">웹 문제 C-1 풀이</a></li>
+        <li><a target="_blank" href="./c_01_web.html">웹 문제 1</a></li>
+        <li><a target="_blank" href="./c_02_web.html">웹 문제 2</a></li>
+        <li><a target="_blank" href="./c_02_web_result.html">웹 문제 2 풀이</a></li>
+        <li><a target="_blank" href="./c_04_web.html">웹 문제 C-1</a></li>
+        <li><a target="_blank" href="./c_04_web_result.html">웹 문제 C-1 풀이</a></li>
+        <li><a target="_blank" href="./c_05_web.html">웹 문제 B-4 풀이</a></li>
       </ul>
     </div>
   </div><!-- // #wrap -->
