웹기능 문제 풀이

--- a/study_code/c_layout_01/html/c_05_web.html
+++ b/study_code/c_layout_01/html/c_05_web.html
@@ -12,7 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="../fonts/fontAwesome/css/all.min.css">
-  
+
+  <link rel="stylesheet" href="../css/common/variable.css">
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
   <link rel="stylesheet" href="../css/src/c_05_web.css">
@@ -25,6 +26,10 @@
 <body>
   <!-- layout -->
   <div id="wrap">
+    <header id="headBox"></header>
+    <section id="viewBox"></section>
+    <article id="conBox"></article>
+    <footer id="footBox"></footer>
 
 
   </div><!-- // #wrap -->
