--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -49,7 +49,7 @@
 
         <div class="unb_search_area">
           <div class="unb_search">
-            <div class="unb_serch_icon"></div>
+            <div class="unb_search_icon"></div>
           </div>
           <div class="unb_cart"></div>
         </div>
