--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -41,17 +41,21 @@
         </ul>
       </div>
       <div id="unb">
-        <div class="unb_btn">
-          <div class="unb_sign">회원가입</div>
-          <div class="unb_login">로그인</div>
-          <div class="unb_cs">고객센터</div>
-        </div>
+        <ul class="unb_btn">
+          <li class="unb_sign"><a href="#">회원가입</a></li>
+          <li class="unb_login"><a href="#">로그인</a></li>
+          <li class="unb_cs"><a href="#">고객센터</a></li>
+        </ul>
 
         <div class="unb_search_area">
           <div class="unb_search">
-            <div class="unb_search_icon"></div>
+            <div class="unb_search_icon">
+              <img src="../img/search.png" alt="검색 아이콘">
+            </div>
           </div>
-          <div class="unb_cart"></div>
+          <div class="unb_cart">
+            <img src="../img/cart.png" alt="장바구니 아이콘">
+          </div>
         </div>
       </div>
     </header> <!-- // #headBox-->
@@ -197,7 +201,13 @@
         </div>
         <div class="awards_after_btn"></div>
       </div>
-      <div class="awards_bottom"></div>
+      <div class="awards_bottom">
+        <div class="awards_circle"></div>
+        <div class="awards_circle"></div>
+        <div class="awards_circle"></div>
+        <div class="awards_circle"></div>
+        <div class="awards_circle"></div>
+      </div>
 
     </aside> <!-- // #awardsBox-->
 
