--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -32,12 +32,12 @@
       </h1>
       <div id="gnb">
         <ul>
-          <li><a href="#">모든 상품</a></li>
-          <li><a href="#">챌린지</a></li>
-          <li><a href="#">이벤트</a></li>
-          <li><a href="#">매거진</a></li>
-          <li><a href="#">브랜드 소개</a></li>
-          <li><a href="#">매장안내</a></li>
+          <li class="gnb_item"><a href="#">모든 상품</a></li>
+          <li class="gnb_challenge"><a href="#">챌린지</a></li>
+          <li class="gnb_event"><a href="#">이벤트</a></li>
+          <li class="gnb_magazine"><a href="#">매거진</a></li>
+          <li class="gnb_brand"><a href="#">브랜드 소개</a></li>
+          <li class="gnb_store"><a href="#">매장안내</a></li>
         </ul>
       </div>
       <div id="unb">
@@ -120,22 +120,42 @@
       <h2 class="blind">혜택</h2>
       <div class="benefit_title_area">
         <div class="benefit_title">잠시만요</div>
-        <div class="benefit_text_detail">큐브미몰에서만 제공되는 혜택이에요.</div>
+        <div class="benefit_title_detail">큐브미몰에서만 제공되는 혜택이에요.</div>
       </div>
       <div class="benefit_detail_area">
         <div class="benefit">
-          <div class="benefit_img"></div>
-          <div class="benefit_text">회원가입시 총 5,000원 상당 혜택 및 100원 쿠폰 증정</div>
+          <div class="benefit_img">
+            <img src="../img/wallet.png" alt="지갑 이미지">
+          </div>
+          <p class="benefit_text">
+            회원가입시 
+          <span class="benefit_bold">총 5,000원 상당 </span>
+          혜택 및 
+          <span class="benefit_bold">100원 쿠폰 </span>
+          증정
+        </p>
         </div>
 
         <div class="benefit">
-          <div class="benefit_img"></div>
-          <div class="benefit_text">포토리뷰 작성시 2,000P 적립</div>
+          <div class="benefit_img">
+            <img src="../img/coin.png" alt="동전 이미지">
+          </div>
+          <p class="benefit_text">
+            포토리뷰 작성시 
+            <span class="benefit_bold">2,000P </span>
+            적립
+          </p>
         </div>
 
         <div class="benefit">
-          <div class="benefit_img"></div>
-          <div class="benefit_text">친구 추천시 나와 친구 5,000P 지급</div>
+          <div class="benefit_img">
+            <img src="../img/hands.png" alt="악수 이미지">
+          </div>
+          <p class="benefit_text">
+            친구 추천시 나와 친구 
+            <span class="benefit_bold">5,000P </span>
+            지급
+          </p>
         </div>
       </div>
 
@@ -193,11 +213,15 @@
       <div class="awards_area">
         <div class="awards_before_btn"></div>
         <div class="awards_main">
-          <div class="awards_before"></div>
+          <div class="awards_before">
+            <div class="awards_side_black"></div>
+          </div>
           <div class="awards"></div>
           <div class="awards"></div>
           <div class="awards"></div>
-          <div class="awards_after"></div>
+          <div class="awards_after">
+            <div class="awards_side_black"></div>
+          </div>
         </div>
         <div class="awards_after_btn"></div>
       </div>
@@ -289,7 +313,7 @@
     <footer id="footBox">
       <div class="foot_top_area">
         <h2>
-          <span class="blind">큐브미</span>
+          <span class="blind">큐브미 하단</span>
           <img src="../img/footer-logo-text.svg" alt="큐브미 하단 로고">
         </h2>
         <div class="foot_top_btn">
@@ -318,8 +342,12 @@
 
         <div class="foot_bottom_btn">
           <div class="foot_language">KOR</div>
-          <div class="foot_facebook">f</div>
-          <div class="foot_instagram">o</div>
+          <div class="foot_facebook">
+            <img src="../img/facebook.png" alt="페이스북 로고">
+          </div>
+          <div class="foot_instagram">
+            <img src="../img/instagram.png" alt="인스타그램 로고">
+          </div>
         </div>
       </div>
 
