--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -62,7 +62,7 @@
 
 
     <section id="viewBox">
-      <h2 class="blind">상단 배너</h2>
+      <h2 class="blind">메인 광고</h2>
       <div class="view_area">
         <div class="view_before_btn"></div>
         <div class="view"></div>
