--- a/study_code/a_project/index.html
+++ b/study_code/a_project/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script>
-    let url="./html/main_v1.html";
+    var url="./html/main_v1.html";
     window.location = url;
   </script>
 </body>
