--- a/study_code/b_step_01/html/a_00_content.html
+++ b/study_code/b_step_01/html/a_00_content.html
@@ -53,6 +53,13 @@
         </ul>
 
       </div>
+
+      <div class="ex_part">
+        <h2>내용 요약 정리</h2>
+        <ul>
+          <li><a target="_blank" href="./c_01_position_set.html">포지션 개념 및 예시</a></li>
+        </ul>
+      </div>
     </div>
     <!-- script -->
     <script></script>
