--- a/study_code/b_step_01/html/a_00_content.html
+++ b/study_code/b_step_01/html/a_00_content.html
@@ -58,6 +58,7 @@
         <h2>내용 요약 정리</h2>
         <ul>
           <li><a target="_blank" href="./c_01_position_set.html">포지션 개념 및 예시</a></li>
+          <li><a target="_blank" href="./c_02_language.html">언어 선택 및 페이지 이동</a></li>
         </ul>
       </div>
     </div>
