슬라이드 배너

--- a/study_code/b_step_01/html/c_03_slide_banner.html
+++ b/study_code/b_step_01/html/c_03_slide_banner.html
@@ -46,11 +46,11 @@
           
         <div class="slide_content">
           <div class="slide_con_wrap">
-            <div id="slide_01" class="action"><a href="#">slide_01</a></div>
-            <div id="slide_02"><a href="#">slide_02</a></div>
-            <div id="slide_03"><a href="#">slide_03</a></div>
-            <div id="slide_04"><a href="#">slide_04</a></div>
-            <div id="slide_05"><a href="#">slide_05</a></div>
+            <div class="slide_01 action"><a href="#">slide_01</a></div>
+            <div class="slide_02"><a href="#">slide_02</a></div>
+            <div class="slide_03"><a href="#">slide_03</a></div>
+            <div class="slide_04"><a href="#">slide_04</a></div>
+            <div class="slide_05"><a href="#">slide_05</a></div>
           </div>
         </div><!-- // .slide_content -->
 
@@ -80,11 +80,11 @@
           
         <div class="slide_content">
           <div class="slide_con_wrap">
-            <div id="slide_01"><a href="#">slide_01</a></div>
-            <div id="slide_02"><a href="#">slide_02</a></div>
-            <div id="slide_03"><a href="#">slide_03</a></div>
-            <div id="slide_04"><a href="#">slide_04</a></div>
-            <div id="slide_05"><a href="#">slide_05</a></div>
+            <div class="slide_01"><a href="#">slide_01</a></div>
+            <div class="slide_02"><a href="#">slide_02</a></div>
+            <div class="slide_03"><a href="#">slide_03</a></div>
+            <div class="slide_04"><a href="#">slide_04</a></div>
+            <div class="slide_05"><a href="#">slide_05</a></div>
           </div>
         </div><!-- // .slide_content -->
 
@@ -96,7 +96,7 @@
   </div><!-- // #wrap -->
 
   <!-- script -->
-  <script></script>
+  <script src="../js/src/c_03_slide_banner.js"></script>
   
 </body>
 </html>
