목차 업데이트

--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -31,6 +31,8 @@
         <li><a target="_blank" href="b_03_layout_test_04_result.html">레이아웃 과제 결과 4</a></li>
         <li><a target="_blank" href="b_04_layout_test_pdf_result.html">pdf 결과</a></li>
         <li><a target="_blank" href="b_05_layout_test_pdf.html">웹 디자인 기능사 문제</a></li>
+        <li><a target="_blank" href="b_05_photoshop_layout.html">gcass메인페이지</a></li>
+        <li><a target="_blank" href="b_05_layout_test_gcass_main_result.html">gcass메인페이지 풀이</a></li>
       </ul>
     </div>
     <div class="part">
@@ -42,7 +44,6 @@
         <li><a target="_blank" href="./c_04_web.html">웹 문제 C-1</a></li>
         <li><a target="_blank" href="./c_04_web_result.html">웹 문제 C-1 풀이</a></li>
         <li><a target="_blank" href="./c_05_web.html">웹 문제 B-4 풀이</a></li>
-        <li><a target="_blank" href="./c_06_photoshop_layout.html">웹 문제 B-4 풀이</a></li>
       </ul>
     </div>
   </div><!-- // #wrap -->
