gcass풀이 업데이트

--- a/study_code/c_layout_01/html/b_05_layout_test_gcass_main_result.html
+++ b/study_code/c_layout_01/html/b_05_layout_test_gcass_main_result.html
@@ -25,10 +25,71 @@
   <!-- layout -->
   <div id="wrap">
 
-    <header id="headBox"></header>
-    <section id="viewBox"></section>
-    <aside id="sideBox"></aside>
-    <footer id="footBox"></footer>
+    <header id="headBox">
+      <h1 class="blind_wrap">
+        <a href="./a_content.html">
+          <span>gcass</span>
+        </a>
+      </h1>
+      <nav class="gnb">
+        <h2 class="blind">navigation</h2>
+        <ul class="clearfix">
+          <li><a href="#">
+            about
+            <i class="fas fa-caret-right"></i>
+          </a></li>
+          <li><a href="#">
+            study
+            <i class="fas fa-caret-right"></i>
+          </a></li>
+          <li><a href="#">
+            photo
+            <i class="fas fa-caret-right"></i>
+          </a></li>
+          <li><a href="#">
+            blog
+            <i class="fas fa-caret-right"></i>
+          </a></li>
+          <li><a href="#">
+            press
+            <i class="fas fa-caret-right"></i>
+          </a></li>
+          <li><a href="#">
+            <abbr title="질의 응답">
+              Q<span>&amp;</span>A
+            </abbr>
+          </a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="viewBox">
+      <h2 class="blind">gcass 대표광고</h2>
+      <div class="view_img">
+        <!-- // 광고용 이미지 처리 -->
+      </div>
+      <div class="view_content">
+        <!-- // 광고용 이미지 처리 -->
+        <p class="blind">Lorem ipsum dolor sit amet.</p>
+      </div>
+    </section>
+    <aside id="sideBox">
+      <h2 class="blind">utility navigation</h2>
+      <ul class="unb">
+        <li class="home"><a href="#">home</a></li>
+        <li class="study"><a href="#">study</a></li>
+        <li class="education"><a href="#">education<span></span></a></li>
+      </ul>
+    </aside>
+    <footer id="footBox" class="clearfix">
+      <h2>gcass infomation</h2>
+      <div class="site_service">
+        <h3 class="blind">회사 위치 및 관련 sns</h3>
+      </div>
+      <address></address>
+      <div class="other">
+        <h3 class="blind">family site 및 추가 내용</h3>
+      </div>
+    </footer>
   </div><!-- // #wrap -->
 
   <!-- script -->
