--- a/study_code/b_step_01/html/a_00_content.html
+++ b/study_code/b_step_01/html/a_00_content.html
@@ -50,6 +50,8 @@
           <li><a target="_blank" href="./b_06_positon.html">position</a></li>
           <li><a target="_blank" href="./b_07_font.html">font 이해</a></li>
           <li><a target="_blank" href="./b_08_unit.html">unit 단위의 이해</a></li>
+          <li><a target="_blank" href="./b_09_background.html">배경이미지</a></li>
+          <li><a target="_blank" href="./b_10_shadow.html">그림자 만들기</a></li>
         </ul>
 
       </div>
