--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -40,7 +40,7 @@
           <ul>
             <li class="gnb_item"><a href="#">모든 상품</a></li>
             <li class="gnb_challenge"><a href="#">챌린지</a></li>
-            <li class="gnb_event"><a href="#">이벤트</a></li>
+            <li class="gnb_event"><a href="./event_v1.html">이벤트</a></li>
             <li class="gnb_magazine"><a href="#">매거진</a></li>
             <li class="gnb_brand"><a href="#">브랜드 소개</a></li>
             <li class="gnb_store"><a href="#">매장안내</a></li>
