--- a/study_code/b_step_02/html/transform.html
+++ b/study_code/b_step_02/html/transform.html
@@ -53,6 +53,26 @@
         <li>scale</li>
       </ul>
     </div>
+
+    <div class="part">
+      <h3>skew(뒤틀림)</h3>
+      <ul class="skew">
+        <li>skew</li>
+        <li>skew</li>
+        <li>skew</li>
+        <li><span>skew</span></li>
+      </ul>
+    </div><!-- .skew -->
+
+    <div class="part">
+      <h3>rotate</h3>
+      <ul class="rotate">
+        <li>45deg rotate</li>
+        <li>720deg rotate</li>
+        <li>30deg rotate</li>
+        <li>30deg, 45deg rotate</li>
+      </ul>
+    </div>
   </div><!-- // #wrap -->
 
   <!-- script -->
