rotate, translate+rotate

--- a/study_code/b_step_02/html/transform.html
+++ b/study_code/b_step_02/html/transform.html
@@ -70,7 +70,38 @@
         <li>45deg rotate</li>
         <li>720deg rotate</li>
         <li>30deg rotate</li>
-        <li>30deg, 45deg rotate</li>
+        <li>3d rotate</li>
+        <li>
+          <div class="front">y:180deg</div>
+          <div class="back">뒤집어진 카드</div>
+        </li>
+      </ul>
+    </div><!-- .rotate -->
+
+    <div class="part">
+      <ul class="rotate2">
+        <li>card_01</li>
+        <li>card_02</li>
+        <li>card_03</li>
+        <li>card_04</li>
+        <li>card_05</li>
+        <li>card_06</li>
+      </ul>
+      <ul class="rotate3">
+        <li>card_01</li>
+        <li>card_02</li>
+        <li>card_03</li>
+        <li>card_04</li>
+        <li>card_05</li>
+        <li>card_06</li>
+      </ul>
+    </div><!-- .rotate2, 3 -->
+
+    <div class="part">
+      <h3>복합수행</h3>
+      <ul class="multi_tr">
+        <li>1: x축으로 500px 이동, 회전 180도</li>
+        <li>2: 회전 180도, x축으로 500px 이동</li>
       </ul>
     </div>
   </div><!-- // #wrap -->
