--- a/study_code/b_step_02/html/a_content.html
+++ b/study_code/b_step_02/html/a_content.html
@@ -29,12 +29,19 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <h1><a href="./a_content.html"></a></h1>
+    <h1><a href="./a_content.html">웹</a></h1>
     <hr>
+    <div class="part">
+      <h2>html</h2>
+      <ul>
+        <li><a target="_blank" href="./b_01_audio.html">audio파일</a></li>
+        <li><a target="_blank" href="./b_01_video.html">video파일</a></li>
+      </ul>
+    </div>
     <div class="part">
       <h2>css 고급기능</h2>
       <ul>
-        <li><a target="_blank" href="./transform.html">transform의 이해</a></li>
+        <li><a target="_blank" href="./c_01_transform.html">transform의 이해</a></li>
       </ul>
     </div>
   </div><!-- // #wrap -->
