--- a/study_code/b_step_02/html/b_01_video.html
+++ b/study_code/b_step_02/html/b_01_video.html
@@ -35,7 +35,7 @@
       <h2>영상첨부</h2>
 
       <div class="movie">
-        <video class="movie_area" volum="0" muted autoplay controls loop preload poster="../multi/video/water-g922a17260_1920.jpg">
+        <video class="movie_area" volum="0" muted controls loop preload poster="../multi/video/water-g922a17260_1920.jpg">
           <source src="../multi/video/Dog-73249.webm" type="video/webm">
           <source src="../multi/video/Dog-73249.ogg" type="video/ogg">
           <source src="../multi/video/Dog-73249.mp4" type="video/mp4">
@@ -44,6 +44,14 @@
             <a href="http://google.com/chrome">최신 브라우저</a>를 이용하여 주세요
           </p>
         </video>
+      </div>
+
+    
+    </div>
+    <div class="part">
+      <h2>iframe - 외부문서 불러오기</h2>
+      <div class="movie">
+        <iframe src="https://www.youtube.com/embed/QCsbVXxY8jw" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div><!-- // #wrap -->
