--- a/study_code/b_step_02/html/c_03_overflow.html
+++ b/study_code/b_step_02/html/c_03_overflow.html
@@ -30,6 +30,45 @@
   <!-- layout -->
   <div id="wrap">
     <h1><a href="./a_content.html">웹</a></h1>
+
+    <div class="part">
+      <h2>넘치는 영역에 대한 처리</h2>
+      <div class="over_01">
+        <h3>해당하는 영역의 제목</h3>
+        <p>내용에 대한 설명을 담는 영역</p>
+        <dl>
+          <dt>목차 제목</dt>
+          <dd>
+            <ul>
+              <li>다양한 리스트 처리_01</li>
+              <li>다양한 리스트 처리_02</li>
+              <li>다양한 리스트 처리_03</li>
+              <li>다양한 리스트 처리_04</li>
+              <li>다양한 리스트 처리_05</li>
+            </ul>
+          </dd>
+        </dl>
+      </div><!-- // .over_01 -->
+
+      <div class="over_02">
+        <div class="con_wrap">
+          <h3>해당하는 영역의 제목</h3>
+          <p>내용에 대한 설명을 담는 영역</p>
+          <dl>
+            <dt>목차 제목</dt>
+            <dd>
+              <ul>
+                <li>다양한 리스트 처리_01</li>
+                <li>다양한 리스트 처리_02</li>
+                <li>다양한 리스트 처리_03</li>
+                <li>다양한 리스트 처리_04</li>
+                <li>다양한 리스트 처리_05</li>
+              </ul>
+            </dd>
+          </dl>
+        </div>
+      </div><!-- // .over_02 -->
+    </div><!-- // .part -->
   </div><!-- // #wrap -->
 
   <!-- script -->
