--- a/study_code/b_step_02/html/c_04_border_radius.html
+++ b/study_code/b_step_02/html/c_04_border_radius.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<!-- a_content.html -->
+<!-- c_04_border_radius.html -->
 <html lang="ko-KR" class="no-js">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <!-- font : 구글 폰트 - noto-sans-KR -->
+  <!-- font : 구글 폰트 - noto-sans-KR -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
@@ -18,39 +18,22 @@
   <!-- css -->
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/a_content.css">
+  <link rel="stylesheet" href="../css/src/c_04_border_radius.css">
 
-  <!-- modernizr -->
+  <!-- script -->
   <script src="../js/common/modernizr-custom.js"></script>
 
-  <title>웹기초</title>
+  <title>border-radius</title>
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   <link rel="apple-touch-icon" href="favicon.png">
 <body>
   <!-- layout -->
   <div id="wrap">
     <h1><a href="./a_content.html">웹</a></h1>
-    <hr>
-    <div class="part">
-      <h2>html</h2>
-      <ul>
-        <li><a target="_blank" href="./b_01_audio.html">audio파일</a></li>
-        <li><a target="_blank" href="./b_01_video.html">video파일</a></li>
-      </ul>
-    </div>
-    <div class="part">
-      <h2>css 고급기능</h2>
-      <ul>
-        <li><a target="_blank" href="./c_01_transform.html">transform의 이해</a></li>
-        <li><a target="_blank" href="./c_02_transform2.html">transform의 이해2</a></li>
-        <li><a target="_blank" href="./c_03_overflow.html">overflow의 이해</a></li>
-        <li><a target="_blank" href="./c_04_border_radius.html">border-radius의 이해</a></li>
-      </ul>
-    </div>
   </div><!-- // #wrap -->
 
   <!-- script -->
-  <script></script>
-  
+  <script>
+  </script>
 </body>
 </html>
