--- a/study_code/b_step_02/html/c_04_border_radius.html
+++ b/study_code/b_step_02/html/c_04_border_radius.html
@@ -30,6 +30,24 @@
   <!-- layout -->
   <div id="wrap">
     <h1><a href="./a_content.html">웹</a></h1>
+
+    <div class="part">
+      <h2>border-radius</h2>
+      <ul>
+        <li>01</li>
+        <li>02</li>
+        <li>03</li>
+        <li>04</li>
+        <li>05</li>
+        <li>06</li>
+        <li>07</li>
+        <li>08</li>
+        <li>09</li>
+        <li>10</li>
+      </ul>
+    </div>
+    <div class="r1"></div>
+    <div class="r2"></div>
   </div><!-- // #wrap -->
 
   <!-- script -->
