네이버 로그인 페이지 실습

--- a/study_code/b_step_02/html/b_03_form.html
+++ b/study_code/b_step_02/html/b_03_form.html
@@ -77,6 +77,31 @@
       </form>
     </div>
 
+    <div class="part">
+      <div class="login_area">
+        <div class="id_area">
+          <div class="id_icon"></div>
+          <input type="text" id="userId" value="" name="userId" placeholder="아이디">
+        </div>
+
+        <div class="password_area">
+          <div class="pw_icon"></div>
+          <input type="password" id="userPw" value="" name="userPw" placeholder="비밀번호">
+        </div>
+
+        <div class="login_stay">
+          <input type="checkbox" id="loginCheck">
+          <span class="login_stay_text">로그인 상태 유지</span>
+        </div>
+
+        <input type="submit" id="userLogin" value="로그인">
+      </div>
+      <ul class="user_find">
+        <li class="pw_find">비밀번호 찾기</li>
+        <li class="id_find">아이디 찾기</li>
+        <li class="sign_up">회원가입</li>
+      </ul>
+    </div>
 
 
   </div><!-- // #wrap -->
