회원가입 페이지 레이아웃짜기

--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -34,6 +34,8 @@
         <li><a target="_blank" href="b_05_photoshop_layout.html">gcass메인페이지</a></li>
         <li><a target="_blank" href="b_05_layout_test_gcass_main_result.html">gcass메인페이지 풀이</a></li>
         <li><a target="_blank" href="b_06_layout_test_naver_login_result.html">네이버 로그인 페이지 코딩</a></li>
+        <li><a target="_blank" href="b_06_layout_test_sign_up.html">회원가입 페이지 코딩</a></li>
+        <li><a target="_blank" href="b_07_jobis_signup_result.html">회원가입 페이지 코딩 풀이</a></li>
       </ul>
     </div>
     <div class="part">
