--- a/study_code/c_layout_01/html/b_07_jobis_signup_result.html
+++ b/study_code/c_layout_01/html/b_07_jobis_signup_result.html
@@ -9,7 +9,7 @@
   <!-- font : 구글 폰트 - noto-sans-KR -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700&display=swap" rel="stylesheet">
   <!-- fontawesome -->
   <link rel="stylesheet" href="../fonts/fontAwesome/css/all.min.css">
   <!-- ibm_plex -->
@@ -31,28 +31,41 @@
   <div id="wrap">
     <h1><a href="./a_content.html">웹</a></h1>
 
-    <article id="singUp">
+    <article id="signUp">
       <h2>회원가입</h2>
       <div class="sign_content">
-        <div class="make_account">
-          <div class="input_text">
+        
+        <form action="#" method="post" class="make_account">
+          <fieldset class="input_text">
             <ul>
-              <li>회사명</li>
-              <li>이메일</li>
-              <li>비밀번호</li>
-              <li>휴대폰 번호</li>
+              <li>
+                <label for="companyName" class="blind">회사명</label>
+                <input type="text" id="companyName" name="company__name" value="" placeholder="회사명"/>
+              </li>
+              <li>
+                <label for="emailAddress" class="blind">이메일</label>
+                <input type="email" id="emailAddress" name="email__address" value="" placeholder="이메일"/>
+              </li>
+              <li>
+                <label for="passwordKey" class="blind">비밀번호</label>
+                <input type="password" id="passwordKey" name="password__key" value="" placeholder="비밀번호"/>
+              </li>
+              <li>
+                <label for="phoneNumber" class="blind">휴대폰 번호</label>
+                <input type="tel" id="phoneNumber" name="phone__number" value="" placeholder="휴대폰 번호"/>
+              </li>
             </ul>
-          </div>
+          </fieldset>
           <p>
             잠깐! 이미 자비스에 가입된 회사의 직원이신가요? <br />
-            담당자가 보낸 초대메일을 먼저 확인해주세요. <a href="#"><span class="blind">담당자 초대메일 관련 내용</span>자세히복기</a>
+            담당자가 보낸 초대메일을 먼저 확인해주세요. <a href="#"><span class="blind">담당자 초대메일 관련 내용</span>자세히보기</a>
           </p>
-          <div class="make_btn">
-            <button>우리회사 계정 만들기</button>
-          </div>
-        </div>
+          <fieldset class="make_btn">
+            <button type="submit">우리회사 계정 만들기</button>
+          </fieldset>
+        </form>
         <p>
-          가입하면 <a href="#">이용약관</a>rhk
+          가입하면 <a href="#">이용약관</a>과
           <a href="#">개인정보취급방침</a>에 동의한 것으로 봅니다.
         </p>
         <hr>
