--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -36,6 +36,7 @@
         <li><a target="_blank" href="b_06_layout_test_naver_login_result.html">네이버 로그인 페이지 코딩</a></li>
         <li><a target="_blank" href="b_06_layout_test_sign_up.html">회원가입 페이지 코딩</a></li>
         <li><a target="_blank" href="b_07_jobis_signup_result.html">회원가입 페이지 코딩 풀이</a></li>
+        <li><a target="_blank" href="b_08_naver_signup.html">네이버 회원가입 페이지 코딩</a></li>
       </ul>
     </div>
     <div class="part">
