--- a/study_code/b_step_02/html/b_04_form_step_01.html
+++ b/study_code/b_step_02/html/b_04_form_step_01.html
@@ -80,7 +80,7 @@
           <p>이번 주말에 먹고 싶은 음식을 고르시오.</p>
           <ul>
             <li>
-              <input type="checkbox" id="check_01" name="check" value="초밥">
+              <input type="checkbox" id="check_01" name="check" value="초밥" checked>
               <label for="check_01">초밥</label>
             </li>
             <li>
