--- a/study_code/b_step_02/html/b_04_form_step_01.html
+++ b/study_code/b_step_02/html/b_04_form_step_01.html
@@ -57,7 +57,7 @@
           <p>다음중 가장 쉬운 언어는 무엇일까?</p>
           <ul>
             <li>
-              <input type="radio" id="radio_01" name="radio" value="javascript" checked />
+              <input type="radio" id="radio_01" name="radio" value="javascript" checked multiple />
               <label for="radio_01">javascript</label>
             </li>
             <li>
@@ -101,17 +101,88 @@
 
       <fieldset>
         <legend>버튼형식</legend>
+        <input type="reset" value="취소"><br>
+        <input type="submit" value="동의 및 전송"><br />
+        <!-- <del><input type="image" src="../img/witch-hat.png" alt="동의 및 전송"></del><br> -->
+        <input type="button" value="다음 내용 보기"><br>
+        <input type="file" name="send__file" value="" id="fileSelect" />
+        <label for="fileSelect">전송할 파일을 선택하세요.</label>
+
+        <!-- 
+          1. 버튼에서 내용상 구분이 되어야 하는 항목에서는 시각 형태로도 구분이 되게 처리
+          2. 제출/전송/동의 항목이 존재할 경우, 그에 반하는 버튼도 만들면서 취소를 우선순위로 두어야 한다.
+        -->
+        
       </fieldset>
 
       <fieldset>
         <legend>멀티형</legend>
+        <div>
+          <label for="multiLine">여러줄 작성 가능한 요소 설명</label>
+          <textarea name="multi__line" id="multiLine" cols="5" rows="10"></textarea>
+        </div>
+
+        <div>
+          <label for="selectProduct">구매할 제품을 선택하세요.</label>
+          <select name="select__product" id="selectProduct">
+            <option>선택하세요.</option>
+            <option value="mouse">mouse</option>
+            <option value="keyboard">keyboard</option>
+            <option value="tablet">tablet</option>
+            <option value="smartphone">smartphone</option>
+            <option value="latop">laptop</option>
+          </select>
+          <hr>
+          <p>
+            select대안 : mac에서는 select가 전혀 다른 디자인이 나오며, 기본 디자인 자체도 select긴으이 원활하게 동작하지 않기때문에 다른 형태로 처리
+          </p>
+
+          <!-- <label for="mySelect">선택한 내용을...</label> -->
+          <input type="hidden" id="mySelect" name="my__select" value="">
+          <dl class="like_select">
+            <dt>상품을 선택하세요.</dt>
+            <dd>
+              <ul>
+                <li data-select="마우스">마우스</li>
+                <li data-select="키보드">키보드</li>
+                <li data-select="스마트폰">스마트폰</li>
+                <li data-select="태블릿">태블릿</li>
+                <li data-select="노트북">노트북</li>
+              </ul>
+            </dd>
+          </dl>
+        </div>
+
+        <div>
+          <button type="submit">확인</button>
+          <button type="reset">취소</button>
+          <button type="button">버튼</button>
+        </div>
       </fieldset>
 
     </form>
+
+    <div class="other">
+      <label for="year">태어난 연도를 선택하세요.</label>
+      <select name="select__year" id="year">
+        <!-- <option value="">2021</option> -->
+      </select>
+    </div>
   </div><!-- // #wrap -->
 
   <!-- script -->
   <script>
+    var yearSelector = document.querySelector('#year');
+    // var yearSel = document.getElementById('year');
+    var creatOption = document.createElement('option');
+    var y = 2021
+    creatOption.innerText = y + '년';
+    // creatOption.setAttribute('value', '2021');
+    creatOption.value = y;
+
+    yearSelector.append( creatOption );
+
+
   </script>
 </body>
 </html>
