--- a/study_code/b_step_02/html/b_04_form_step_01.html
+++ b/study_code/b_step_02/html/b_04_form_step_01.html
@@ -162,6 +162,8 @@
 
     </form>
 
+    <hr />
+
     <div class="other">
       <label for="year">태어난 연도를 선택하세요.</label>
       <select name="select__year" id="year">
@@ -174,13 +176,54 @@
   <script>
     var yearSelector = document.querySelector('#year');
     // var yearSel = document.getElementById('year');
-    var creatOption = document.createElement('option');
-    var y = 2021
-    creatOption.innerText = y + '년';
-    // creatOption.setAttribute('value', '2021');
-    creatOption.value = y;
+    
 
-    yearSelector.append( creatOption );
+    // // option요소 생성
+    // var creatOption = document.createElement('option');
+
+    // // 기본변수 y생성
+    // var y = 2021;
+    
+    // // option요소에 담을 text, 속성(value)을 첨부
+    // creatOption.innerText = y + '년';
+    // // creatOption.setAttribute('value', '2021');
+    // creatOption.value = y;
+
+    // // option요소를 select요소에 담기
+    // yearSelector.append( creatOption );
+
+
+    // var y = 2021;
+    // y = y -1;
+
+    // 하나의 행동처리를 위한 틀 잡기
+    var yearSel = document.getElementById('year');
+    var y = 2021;
+    var creatOption;
+    var makeFn = function() {
+      creatOption = document.createElement('option');
+      creatOption.innerText = y + '년';
+      creatOption.value = y;
+      yearSelector.append(creatOption);
+    };
+
+    // 틀 수행
+    // makeFn();
+    // y = y -1; // 2020
+
+
+    // 반복수행
+    // for(최초값; 조건비교; 증감){수행}
+
+    // 최초의 y값에서 1870보다 크면 기능을 수행하는데,
+    // 이 수행을 최초의 변수에서 1씩 뺄때마다 수행하고,
+    // 이 내용이 1870과 같아지면 수행하지 않도록
+    // 반복수행하는 내용
+    for(y; y > 1870; y = y-1){
+      makeFn();
+    }
+
+
 
 
   </script>
