--- a/study_code/c_layout_01/html/b_08_naver_signup.html
+++ b/study_code/c_layout_01/html/b_08_naver_signup.html
@@ -113,7 +113,7 @@
       </li>
 
       <li>
-        <h2 class="join_title"><label for="joinEmail">본인 확인 이메일<span>(선택)</span></label></h2>
+        <h2 class="join_title"><label for="joinEmail">본인 확인 이메일<span class="choice">(선택)</span></label></h2>
         <fieldset class="join_email">
           <legend class="blind">본인 확인 이메일 입력란</legend>
           <input type="text" id="joinEmail" placeholder="선택 입력">
