--- a/study_code/c_layout_01/html/b_08_naver_join_result.html
+++ b/study_code/c_layout_01/html/b_08_naver_join_result.html
@@ -5,27 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- font : 구글 폰트 - noto-sans-KR -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
-  <!-- fontawesome -->
-  <link rel="stylesheet" href="../fonts/fontAwesome/css/all.min.css">
-  <!-- ibm_plex -->
   <link rel="stylesheet" href="../fonts/ibm_Plex/IBMPlex.css">
+  <link rel="stylesheet" href="../fonts/fontAwesome/css/all.min.css">
   
-  <!-- css -->
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
   <link rel="stylesheet" href="../css/src/b_08_naver_join_result.css">
-
-  <!-- script -->
   <script src="../js/common/modernizr-custom.js"></script>
-
-  <title>naver join</title>
+  <title>웹기초</title>
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="favicon.png">
+  <link rel="apple-touch-icon" href="../favicon.png">
+</head>
 <body>
   <!-- layout -->
   <div id="wrap">
@@ -33,53 +23,112 @@
 
     <article id="joinBox">
       <h2 class="blind">회원가입</h2>
-      <form action="#" method="post">
+      <form action="#" method="POST">
         <fieldset class="make_account">
           <legend class="blind">아이디 및 비밀번호 생성</legend>
           <ul class="account_area">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="action">
+              <label for="userId">아이디
+                <span class="blind">를 입력하세요.</span>
+              </label>
+              <div class="input_part">
+                <input type="text" name="user__Id" id="userId" value="" />
+                <span>@naver.com</span>
+              </div>
+            </li>
+            <li>
+              <label for="userPw">비밀번호
+                <span class="blind">를 입력하세요.</span>
+              </label>
+              <div class="input_part">
+                <input type="password" name="user__Pw" id="userPw" value="" />
+                <span>
+                  <i class="fas fa-lock"></i>
+                </span>
+              </div>
+            </li>
+            <li>
+              <label for="userPw2">비밀번호 재확인
+                <span class="blind">입니다. <br />
+                다시한번 입력하세요.</span>
+              </label>
+              <div class="input_part">
+                <input type="password" name="user__Pw2" id="userPw2" value="" />
+                <span>
+                  <i class="fas fa-lock"></i>
+                </span>
+              </div>
+            </li>
           </ul>
         </fieldset><!-- // .make_account -->
-
 
         <fieldset class="privacy_data">
           <legend class="blind">개인정보 입력</legend>
           <ul>
-            <li></li>
+            <li>
+              <label for="userName">이름
+                <span class="blind">을 작성해 주세요.</span>
+              </label>
+              <div class="input_part">
+                <input type="text" name="user__Name" id="userName" value="" />
+              </div>
+            </li>
+            <li>
+              <label for="birthYear">생년월일
+                <span class="blind">을 각각 입력해 주세요.</span>
+              </label>
+              <div class="year_part">
+                <div class="particle">
+                  <input class="birth" type="text" name="birth__Year" id="birthYear" value="" />
+                </div>
+                <div class="particle">
+                  <label for="birthMonth" class="blind">태어난 월 선택</label>
+                  <select class="birth" name="birth__Month" id="birthMonth">
+                    <option>월</option>
+                    <option value="01">01월</option>
+                    <option value="02">02월</option>
+                    <option value="03">03월</option>
+                    <option value="04">04월</option>
+                    <option value="05">05월</option>
+                    <option value="06">06월</option>
+                    <option value="07">07월</option>
+                    <option value="08">08월</option>
+                    <option value="09">09월</option>
+                    <option value="10">10월</option>
+                    <option value="11">11월</option>
+                    <option value="12">12월</option>
+                  </select>
+                </div>
+                <div class="particle">
+                  <label for="birthDay" class="blind">태어난 날짜 선택</label>
+                  <input class="birth" type="text" name="birth__Day" id="birthDay" value="" />
+                </div>
+              </div>
+            </li>
             <li></li>
             <li></li>
           </ul>
         </fieldset><!-- // .privacy_data -->
 
-
-        <fieldset class="certify_check">
+        <fieldset class="cirtify_check">
           <legend class="blind">인증 및 확인</legend>
           <ul>
             <li></li>
             <li></li>
             <li></li>
           </ul>
-        </fieldset><!-- // .certify_check -->
-
+        </fieldset><!-- // .cirtify_check -->
 
         <fieldset class="join_btn">
           <legend class="blind">가입동의 버튼</legend>
+
         </fieldset><!-- // .join_btn -->
-
-
-      </form>
+      </form><!-- form -->
     </article>
-
-
-
     <footer id="footBox"></footer>
-
-  </div><!-- // #wrap -->
+  </div>
 
   <!-- script -->
-  <script>
-  </script>
+  <script></script>
 </body>
 </html>
