--- a/study_code/c_layout_01/html/b_08_naver_signup.html
+++ b/study_code/c_layout_01/html/b_08_naver_signup.html
@@ -1,159 +1,184 @@
 <!DOCTYPE html>
-<!-- b_08_naver_signup.html -->
+<!-- b_08_naver_join_result.html -->
 <html lang="ko-KR" class="no-js">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- font : 구글 폰트 - noto-sans-KR -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700&display=swap" rel="stylesheet">
-  <!-- fontawesome -->
-  <link rel="stylesheet" href="../fonts/fontAwesome/css/all.min.css">
-  <!-- ibm_plex -->
   <link rel="stylesheet" href="../fonts/ibm_Plex/IBMPlex.css">
+  <link rel="stylesheet" href="../fonts/fontAwesome/css/all.min.css">
   
-  <!-- css -->
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/b_08_naver_signup.css">
-
-  <!-- script -->
+  <link rel="stylesheet" href="../css/src/b_08_naver_join_result.css">
   <script src="../js/common/modernizr-custom.js"></script>
-
-  <title>naver sign up</title>
+  <title>웹기초</title>
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="favicon.png">
+  <link rel="apple-touch-icon" href="../favicon.png">
+</head>
 <body>
   <!-- layout -->
   <div id="wrap">
-    <h1><a href="./a_content.html"></a></h1>
+    <h1><a href="./a_content.html">웹</a></h1>
 
-    <ul class="join_wrap">
-      <li>
-        <h2 class="join_title"><label for="joinId">아이디</label></h2>
-        <fieldset class="join_id">
-          <legend class="blind">아이디 입력란</legend>
-          <input type="text" id="joinId">
-          <span class="id_url">@naver.com</span>
-        </fieldset>
-      </li>
+    <article id="joinBox">
+      <h2 class="blind">회원가입</h2>
+      <form action="#" method="POST">
+        <fieldset class="make_account">
+          <legend class="blind">아이디 및 비밀번호 생성</legend>
+          <ul class="account_area">
+            <li class="error">
+              <label for="userId">아이디
+                <span class="blind">를 입력하세요.</span>
+              </label>
+              <div class="input_part">
+                <input type="text" name="user__Id" id="userId" value="" required />
+                <span>@naver.com</span>
+              </div>
+              <p class="message">필수 입력사항입니다.</p>
+            </li>
+            <li>
+              <label for="userPw">비밀번호
+                <span class="blind">를 입력하세요.</span>
+              </label>
+              <div class="input_part">
+                <input type="password" name="user__Pw" id="userPw" value="" required />
+                <span>
+                  <i class="fas fa-lock"></i>
+                </span>
+              </div>
+            </li>
+            <li>
+              <label for="userPw2">비밀번호 재확인
+                <span class="blind">입니다. <br />
+                다시한번 입력하세요.</span>
+              </label>
+              <div class="input_part">
+                <input type="password" name="user__Pw2" id="userPw2" value="" required />
+                <span>
+                  <i class="fas fa-lock"></i>
+                </span>
+              </div>
+            </li>
+          </ul>
+        </fieldset><!-- // .make_account -->
 
-      <li>
-        <h2 class="join_title"><label for="joinPw">비밀번호</label></h2>
-        <fieldset class="join_pw">
-          <legend class="blind">비밀번호 입력란</legend>
-          <input type="password" id="joinPw">
-          <label for="joinPw" class="pw_icon"></label>
-        </fieldset>
-      </li>
+        <fieldset class="privacy_data">
+          <legend class="blind">개인정보 입력</legend>
+          <ul>
+            <li>
+              <label for="userName">이름
+                <span class="blind">을 작성해 주세요.</span>
+              </label>
+              <div class="input_part">
+                <input class="full"  type="text" name="user__Name" id="userName" value="" required />
+              </div>
+            </li>
+            <li>
+              <label for="birthYear">생년월일
+                <span class="blind">을 각각 입력해 주세요.</span>
+              </label>
+              <div class="year_part">
+                <div class="particle">
+                  <input class="birth" type="text" name="birth__Year" id="birthYear" value="" placeholder="년(4자)" required />
+                </div>
+                <div class="particle">
+                  <label for="birthMonth" class="blind">태어난 월 선택</label>
+                  <select class="birth" name="birth__Month" id="birthMonth" required>
+                    <option>월</option>
+                    <option value="01">01월</option>
+                    <option value="02">02월</option>
+                    <option value="03">03월</option>
+                    <option value="04">04월</option>
+                    <option value="05">05월</option>
+                    <option value="06">06월</option>
+                    <option value="07">07월</option>
+                    <option value="08">08월</option>
+                    <option value="09">09월</option>
+                    <option value="10">10월</option>
+                    <option value="11">11월</option>
+                    <option value="12">12월</option>
+                  </select>
+                </div>
+                <div class="particle">
+                  <label for="birthDay" class="blind">태어난 날짜 선택</label>
+                  <input class="birth" type="text" name="birth__Day" id="birthDay" value="" placeholder="일" required />
+                </div>
+              </div>
+            </li>
 
-      <li>
-        <h2 class="join_title"><label for="joinRePw">비밀번호 재확인</label></h2>
-        <fieldset class="join_re_pw">
-          <legend class="blind">비밀번호 재입력란</legend>
-          <input type="password" id="joinRePw">
-          <label for="joinRePw" class="pw_re_icon"></label>
-        </fieldset>
-      </li>
+            <li>
+              <label for="userGender">성별
+                <span class="blind">을 선택해 주세요.</span>
+              </label>
+              <div class="input_part">
+                <select class="full" name="user__Gender" id="userGender" required>
+                  <option value="male">남성</option>
+                  <option value="female">여성</option>
+                  <option value="none" selected>선택안함</option>
+                </select>
+              </div>
+            </li>
+            <li>
+              <label for="userEmail">본인 확인 이메일
+                <span class="blind">을 작성해 주세요.</span>
+                <small>(선택)</small>
+              </label>
+              <div class="input_part">
+                <input class="full" type="email" name="user__Email" id="userEmail" value="" placeholder="선택입력" />
+              </div>
+            </li>
+          </ul>
+        </fieldset><!-- // .privacy_data -->
 
-      <li>
-        <h2 class="join_title"><label for="joinName">이름</label></h2>
-        <fieldset class="join_name">
-          <legend class="blind">이름 입력란</legend>
-          <input type="text" id="joinName">
-        </fieldset>
-      </li>
+        <fieldset class="cirtify_check">
+          <legend class="blind">인증 및 확인</legend>
+          <ul>
+            <li>
+              <label for="userTel">휴대전화
+                <span class="blind">번호를 입력하여 사용자 인증해 주세요.</span>
+              </label>
+              <div class="input_part">
+                <select class="full" name="user__Tel" id="userTel">
+                  <option value="1">미국 <span>+1</span></option>
+                  <option selected value="82">대한민국 <span>+82</span></option>
+                  <option value="33">프랑스 <span>+33</span></option>
+                </select>
+              </div>
+            </li>
+            <li>
+              <div class="tel_part">
+                <label for="telNumber" class="blind">
+                  전화번호 입력 하시고 버튼을 눌러 인증받으세요.
+                </label>
+                <input class="full" type="tel" name="tel__Number" id="telNumber" value="" placeholder="전화번호 입력" required />
+              </div>
 
-      <li class="clearfix">
-        <h2 class="join_title"><label for="yy">생년월일</label></h2>
-        <fieldset class="join_yy">
-          <legend class="blind">년도 입력란</legend>
-          <input type="text" id="yy" placeholder="년(4자)">
-        </fieldset>
+              <div class="tel_btn_part">
+                <input class="full" type="button" value="인증번호 받기" class="tel_number_btn" />
+              </div>
+            </li>
+            <li>
+              <label for="cirtifyCheck" class="blind">인증번호 확인</label>
+              <div class="input_part disable">
+                <input class="full" type="text" name="cirtify__Check" id="cirtifyCheck" value="" 
+                placeholder="인증번호를 입력하세요." tabindex="-1" />
+              </div>
+            </li>
+          </ul>
+        </fieldset><!-- // .cirtify_check -->
 
-        <fieldset class="join_mm">
-          <legend class="blind">월 입력란</legend>
-          <select name="mm" id="mm">
-            <option value>월</option>
-            <option value="01">1</option>
-            <option value="02">2</option>
-            <option value="03">3</option>
-            <option value="04">4</option>
-            <option value="05">5</option>
-            <option value="06">6</option>
-            <option value="07">7</option>
-            <option value="08">8</option>
-            <option value="09">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-          </select>
-        </fieldset>
-
-        <fieldset class="join_dd">
-          <legend class="blind">일 입력란</legend>
-          <input type="text" id="dd" placeholder="일">
-        </fieldset>
-      </li>
-
-      <li>
-        <h2 class="join_title"><label for="joinGender">성별</label></h2>
-        <fieldset class="join_gender">
-          <legend class="blind">성별 선택</legend>
-          <select name="gender" id="joinGender">
-            <option value selected>성별</option>
-            <option value="M">남자</option>
-            <option value="W">여자</option>
-            <option value="U">선택 안함</option>
-          </select>
-        </fieldset>
-      </li>
-
-      <li>
-        <h2 class="join_title"><label for="joinEmail">본인 확인 이메일<span class="choice">(선택)</span></label></h2>
-        <fieldset class="join_email">
-          <legend class="blind">본인 확인 이메일 입력란</legend>
-          <input type="text" id="joinEmail" placeholder="선택 입력">
-        </fieldset>
-      </li>
-
-      <li>
-        <h2 class="join_title"><label for="joinPhone">휴대전화</label></h2>
-        <fieldset class="join_nation">
-          <legend class="blind">거주하는 나라 선택</legend>
-          <select name="nation" id="joinNation">
-            <option value="82">대한민국 +82</option>
-          </select>
-        </fieldset>
-
-        <div class="join_num_area clearfix">
-          <fieldset class="join_phone">
-            <legend class="blind">휴대전화 번호 입력란</legend>
-            <input type="tel" id="joinPhone" placeholder="전화번호 입력">
-          </fieldset>
-          <button type="button" class="join_num_btn">인증번호 받기</button>
-        </div>
-
-        <fieldset class="join_num">
-          <legend class="blind">인증번호 입력란</legend>
-          <input type="text" id="joinNum" placeholder="인증번호를 입력하세요">
-        </fieldset>
-      </li>
-
-      <li>
-        <button type="button" class="join_btn">가입하기</button>
-      </li>
-    </ul>
-
-
-    
-  </div><!-- // #wrap -->
+        <fieldset class="join_btn">
+          <legend class="blind">가입동의 버튼</legend>
+          <!-- <input type="submit" value="가입하기" /> -->
+          <button type="submit">가입하기</button>
+        </fieldset><!-- // .join_btn -->
+      </form><!-- form -->
+    </article>
+    <footer id="footBox"></footer>
+  </div>
 
   <!-- script -->
-  <script>
-  </script>
+  <script></script>
 </body>
 </html>
