--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -46,6 +46,7 @@
         <li><a target="_blank" href="b_06_layout_test_sign_up.html">회원가입 페이지 코딩</a></li>
         <li><a target="_blank" href="b_08_naver_signup.html">네이버 회원가입 페이지 코딩</a></li>
         <li><a target="_blank" href="b_09_coupang_login.html">쿠팡 로그인 페이지 코딩</a></li>
+        <li><a target="_blank" href="b_10_coupang_join.html">쿠팡 회원가입 페이지 코딩</a></li>
 
       </ul>
     </div>
